# pyp2req

./: README.md  pyproject.toml
.github/workflows/: publish.yml
src/pyp2req/: __init__.py  __main__.py
