[project]
name = "pyp2req"
description = "pyproject.toml to requirements.txt converter"
dynamic = ["version"]
requires-python = ">=3.8"
authors = [
    { name = "JCGoran", email = "jcgoran@protonmail.com" },
]
dependencies = [
    "tomli;python_version<'3.11'",
]
readme = "README.md"
scripts = { pyp2req = "pyp2req:main" }

[project.urls]
source = "https://github.com/JCGoran/pyp2req"


[build-system]
requires = ["setuptools", "setuptools-scm>=8.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]

[tool.pytest.ini_options]
